# pcg-mutation-testing

./: Cargo.toml  README.md  by_error_message  compile-mutation-testing.sh  foo  rust-toolchain
borrowck/: Cargo.toml  rust-toolchain
borrowck/src/: lib.rs
rustc_borrowck/: Cargo.toml  compile-rustc-borrowck.sh
rustc_borrowck/src/: lib.rs  lib.rs.old
src/: lib.rs  main.rs  out
src/errors/: mod.rs
src/mutator/: block_mutable_borrow.rs  drop_borrowed.rs  expiry_order.rs  mod.rs  move_from_borrowed.rs  mutable_borrow_mutator.rs  mutably_lend_read.rs  mutably_lend_shared.rs  mutator_impl.rs  read_from_write.rs  shallow_exclusive_read.rs  share_mutably_lent.rs  utils.rs  write_to_borrowed.rs  write_to_read.rs  write_to_shared.rs
src/rustc_interface/: mod.rs
src/utils/: mod.rs
tests/: by_error_message.rs  compile_results.rs  foo.rs  selected_crates.rs  top_crates.rs
tests/common/: mod.rs
