[package]
name = "pcg-evaluation"
version = "0.1.0"
edition = "2021"

[dependencies]
bumpalo = { version = "3.12.0", features = ["collections"] }
pcs = { path = "pcg" }
serde = { version = "1.0.133", features = ["derive"] }
serde_json = { version = "1.0.64", features = ["preserve_order"] }
rand = "0.9.0"
toml = "0.7"
indexmap = { version = "2.8.0", features = ["serde"] }

[package.metadata.rust-analyzer]
# This crate uses #[feature(rustc_private)]
rustc_private = true

[[bin]]
name = "pcg_evaluation_bin"
path = "src/main.rs"
