[package]
name = "pcg-evaluation"
version = "0.1.0"
edition = "2021"

[dependencies]
bumpalo = { version = "3.12.0", features = ["collections"] }
pcg = { path = "pcg" }
serde = { version = "1.0.133", features = ["derive"] }
serde_json = { version = "1.0.64", features = ["preserve_order"] }
serde_derive = "1.0"
rand = "0.9.0"
toml = "0.7"
indexmap = { version = "2.8.0", features = ["serde"] }
reqwest = { version = "^0.11", features = ["blocking"] }
rustversion = "1.0"
chrono = "0.4.41"
derive_more = "2.0.1"
rustc_borrowck = { path = "rustc_borrowck", package = "rustc_borrowck" }
rayon = "1.10.0"

[package.metadata.rust-analyzer]
# This crate uses #[feature(rustc_private)]
rustc_private = true

[[bin]]
name = "pcg-evaluation-bin"
path = "src/main.rs"
