[package]
name = "pcg-mutation-testing"
version = "0.1.0"
edition = "2021"

[dependencies]
pcg = { path = "../pcg" }
borrowck = { path = "borrowck" }
bumpalo = { version = "3.12.0", features = ["collections"] }
serde = { version = "1.0.133", features = ["derive"] }
serde_json = { version = "1.0.64", features = ["preserve_order"] }
serde_derive = "1.0"
rand = "0.9.0"
toml = "0.7"
indexmap = { version = "2.8.0", features = ["serde"] }
reqwest = { version = "^0.11", features = ["blocking"] }
rustversion = "1.0"
chrono = "0.4.41"
rayon = "1.10.0"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
derive_more = { version = "2.0.1", features = ["full"] }

[package.metadata.rust-analyzer]
# This crate uses #[feature(rustc_private)]
rustc_private = true

[[bin]]
name = "mutation_testing_bin"
path = "src/main.rs"
